Fixed alert z-index

--- a/Chat.Web/wwwroot/css/_misc.scss
+++ b/Chat.Web/wwwroot/css/_misc.scss
@@ -16,6 +16,7 @@ a {
     width: 500px;
     right: 25px;
     top: 25px;
+    z-index: 9999;
 }
 
 // Forms
